# snapbar-desktop

./: .gitattributes  .gitignore  DESIGN.md  LICENSE  README.md  index.html  package-lock.json  package.json
docs/: SNAPBAR ROADMAP FEATURES.md  XD TOOLBAR IDEIAS.md  XD WORFLOW.md
scripts/: build-site.mjs  prepare-runtime-assets.ps1  verify-runtime-assets.ps1
site/: _headers  download.html  index.html  styles.css  vite.config.ts
site/src/: landing.ts  releases.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  installer-hooks.nsh  runtime-assets.json  tauri.conf.json
src-tauri/capabilities/: default.json  notes.json  typo-fire-popup.json
src-tauri/icons/: icon.icns
src-tauri/src/: internet_downloads.rs  lib.rs  main.rs  media_mixer.rs  notes_window.rs  process.rs  productivity.rs  recording.rs  runtime_assets.rs  screenshot.rs  secure_store.rs  settings_window.rs  shortcuts.rs  speech.rs  text_insertion.rs  tool_paths.rs  typo_fire.rs
src/components/: Counter.tsx
src/downloads/: DownloadsApp.css  DownloadsApp.tsx
src/lib/: adaptive-window-geometry.ts  app-settings.test.ts  app-settings.ts  apply-appearance.ts  disable-browser-defaults.ts  internet-downloads.test.ts  internet-downloads.ts  media-actions.test.ts  media-actions.ts  media-mixer-window.test.ts  media-mixer-window.ts  media-mixer.test.ts  media-mixer.ts  notes.test.ts  notes.ts  productivity.test.ts  productivity.ts  recording-prefs.test.ts  recording-prefs.ts  retired-google-backup.ts  runtime-readiness.test.ts  runtime-readiness.ts  secure-storage.ts  (+12 more)
tests/: appearance-ui.test.ts  downloads-ui.test.ts  launcher-ui.test.ts  media-mixer-integration.test.ts  media-mixer-ui.test.ts  notes-window.test.ts  open-source-backend.test.ts  open-source-frontend.test.ts  productivity-ui.test.ts  route-loading.test.ts  screenshot-ui.test.ts  settings-css.test.ts  settings-files-ui.test.ts  settings-layout-order.test.ts  settings-text-blaze.test.ts  site-flow.test.ts  speech-ui.test.ts  typo-fire-app.test.ts  typo-fire-popup.test.ts
(+28 files in other folders)
