[package]
name = "snapbar"
version = "0.1.2"
description = "Floating desktop command bar"
authors = ["Lari"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "snapbar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"
sha2 = "0.10"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri-plugin-store = "2.4.3"
tauri-plugin-global-shortcut = "2"
xcap = { version = "0.9.6", features = ["image"] }
arboard = "3.6.1"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
image = { version = "0.25.9", default-features = false, features = ["png"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
regex = "1"
base64 = "0.22"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.dependencies]
hound = "3.5.1"
wasapi = "0.23.0"
windows = { version = "0.62.2", features = [
  "Foundation",
  "Media",
  "Media_Control",
  "Storage_Streams",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_Security",
  "Win32_Security_Cryptography",
  "Win32_System_Memory",
  "Win32_System_LibraryLoader",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_DataExchange",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }
